--- a/apps/devops-toolkit.yaml
+++ b/apps/devops-toolkit.yaml
@@ -7,15 +7,12 @@ metadata:
 spec:
   chart:
     spec:
-      chart: helm
+      chart: spring-boot-docker
       sourceRef:
-        kind: GitRepository
-        name: devops-toolkit
-  interval: 31s
+        kind: HelmRepository
+        name: acr
+  interval: 35s
   targetNamespace: staging
   values:
     image:
       tag: 0.1.2
-    ingress:
-      host: staging.devops-toolkit.10.0.0.71.nip.io
-
